syntax = "proto3";

package jobs.V1;

option go_package = "internal/rpc/V1/jobs";

//import 'types.proto';

service JobService {
  rpc NewJob(NewJobRequest) returns (NewJobResponse) {}
  rpc JobStatus(JobStatusRequest) returns (JobStatusResponse) {}
  rpc CancelJob(CancelJobRequest) returns (CancelJobResponse) {}
  rpc Echo(EchoRequest) returns (EchoResponse) {}

}

// todo figure out request/response
message NewJobRequest {
}

message NewJobResponse {
}

message JobStatusRequest {
}

message JobStatusResponse {
}

message CancelJobRequest {
  // You can add filters here if needed
}

message CancelJobResponse {
}

message EchoRequest{
  string message = 1;
}

message EchoResponse{
  string messageResponse = 1;
}